--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sebastiantuyu/versionify",
+  "name": "versionify",
   "version": "0.0.1",
   "description": "A node.js library to handle versioning",
   "files": ["dist/*", "dist/**/*.js"],
