--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@sebastiantuyu/versionify",
-  "version": "0.1.2",
+  "version": "0.1.21",
   "description": "A node.js library to handle versioning",
-  "files": ["index.js", "README.md"],
+  "files": ["dist/index.js", "README.md"],
   "scripts": {
     "test": "jest",
     "build": "tsc --project ."
