--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@sebastiantuyu/versionify",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "A node.js library to handle versioning",
-  "files": ["index.js", "README.md"],
+  "files": [
+    "index.js",
+    "README.md"
+  ],
   "scripts": {
     "test": "jest",
     "build": "tsc --project .",
